35/vh/deploy01.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dep01
  name: dep01
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dep01
  template:
    metadata:
      labels:
        app: dep01
    spec:
      containers:
        - name: nginx-dep01
          image: wangyanglinux/myapp:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: vh-svc-01
spec:
  ports:
    - port: 8000
      targetPort: 80
      protocol: TCP
  selector:
    app: dep01
---
