35/vh/deploy02.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dep02
  name: dep02
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dep02
  template:
    metadata:
      labels:
        app: dep02
    spec:
      containers:
        - name: nginx-dep02
          image: wangyanglinux/myapp:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: vh-svc-02
spec:
  ports:
    - port: 8000
      targetPort: 80
      protocol: TCP
  selector:
    app: dep01
---
